# NumeriXCore

./: .gitignore  CMakeLists.txt  README.md
include/: test.h
src/: approximation_2norm.cpp  boundary_value_problems.cpp  eigenvalues_eigenvectors.cpp  finite_element_method.cpp  initial_value_problems.cpp  iterative_methods.cpp  linear_systems.cpp  nonlinear_systems.cpp  numerical_integration_i.cpp  numerical_integration_ii.cpp  piecewise_polynomial_approximation.cpp  polynomial_approximation_infinity.cpp  polynomial_interpolation.cpp  special_matrices.cpp  test.cpp
tests/: test_approximation_2norm.cpp  test_boundary_value_problems.cpp  test_eigenvalues_eigenvectors.cpp  test_finite_element_method.cpp  test_initial_value_problems.cpp  test_iterative_methods.cpp  test_linear_systems.cpp  test_nonlinear_systems.cpp  test_numerical_integration_i.cpp  test_numerical_integration_ii.cpp  test_piecewise_polynomial_approximation.cpp  test_polynomial_approximation_infinity.cpp  test_polynomial_interpolation.cpp  test_special_matrices.cpp  test_utilities.cpp
